refactor(rest): Port RemoteSearchAPI from Groovy to Java